--- a/src/main/resources/templates/views/board/list.html
+++ b/src/main/resources/templates/views/board/list.html
@@ -4,7 +4,9 @@
       layout:decorate="~{layouts/layout}">
 
     <th:block layout:fragment="content">
-        <main id="content">
+        <main id="content"
+              th:with="pglink=${(#strings.isEmpty(param.findkey))?
+              '/board/list?cpg=' :'/board/find?findtype=' + param.findtype + '&findkey=' + param.findkey + '&cpg='}">
             <h2>게시판</h2>
             <table class="table table-striped">
                 <colgroup>
@@ -24,7 +26,7 @@
                                 <option selected value="title">제목</option>
                                 <option value="userid">작성자</option>
                                 <option value="contents">내용</option></select>
-                            <input class="form-control" style="width: 250px" id="findkey" name="findkey">
+                            <input class="form-control" style="width: 250px" id="findkey" name="findkey" th:value="${param.findkey}">
                             <button class="btn btn-success" id="findbtn"><i class="fa-solid fa-magnifying-glass"></i> 검색</button>
                         </div>
                     </td>
@@ -59,7 +61,7 @@
                         <ul class="pagination">
                             <!-- 현재 페이지가 1/10 보다 크면 '이전' 표시-->
                             <li class="page-item" th:if="${cpg gt 10} ">
-                                <a th:href="|/board/list?cpg=${cpg - 1}|" class="page-link">이전</a>
+                                <a th:href="|${pglink}${cpg - 1}|" class="page-link">이전</a>
                             </li>
 
                         <th:block th:each="i : ${#numbers.sequence(stblk, stblk + 9)}">
@@ -67,13 +69,13 @@
                             <th:block th:if="${i le cntpg}">
                             <!-- i와 cpg가 일치하지 않으면 평범하게 출력 -->
                             <li th:class="${(i ne cpg) ? 'page-item' : 'page-item active'}">
-                                <a th:href="|/board/list?cpg=${i}|"
+                                <a th:href="|${pglink}${i}|"
                                    class="page-link" th:text="${i}">1</a></li>
                             </th:block>
                         </th:block>
 
                             <li class="page-item">
-                                <a th:href="|/board/list?cpg=${cpg + 1}|" class="page-link">다음</a>
+                                <a th:href="|${pglink}${cpg + 1}|" class="page-link">다음</a>
                             </li>
                         </ul>
                         </td>
