게시판 본문글 구현1 - 본문글 보기 링크 생성, 본문글 출력, 테스트 클래스 작성

--- a/src/main/resources/templates/views/board/list.html
+++ b/src/main/resources/templates/views/board/list.html
@@ -47,7 +47,7 @@
                 <tbody>
                     <tr th:each="bd : ${bds}">
                         <td th:text="${bd.bno}"></td>
-                        <td th:text="${bd.title}"></td>
+                        <td><a th:href="|/board/view?bno=${bd.bno}|" th:text="${bd.title}"></a> </td>
                         <td th:text="${bd.userid}"></td>
                         <td th:text="${#strings.substring(bd.regdate,0,10)}"></td>
                         <td th:text="${bd.thumbs}"></td>
