--- a/src/main/resources/templates/views/board/view.html
+++ b/src/main/resources/templates/views/board/view.html
@@ -7,15 +7,15 @@
         /* board view */
         .vtit {
             height: 100px; border-bottom: 3px solid black;
-            background: #dff0f8; font-size: 32px; text-align: center;
+            background: #dff0f8 !important; font-size: 32px; text-align: center;
         }
 
-        .vinfo { height: 35px; background: #ccff99; }
+        .vinfo { height: 35px; background: #ccff99 !important; }
         .vinfo td { padding: 5px }
 
         .vcont {
             height: 500px; border-bottom: 3px solid black;
-            background: #ffffcc; padding: 5px; vertical-align: top;
+            background: #ffffcc !important; padding: 5px; vertical-align: top;
         }
 
         .cmtbg { background: yellow; padding: 5px; }
@@ -23,6 +23,7 @@
         .rpybg { background: lime; padding: 5px; }
 
         .pre{white-space: pre-wrap} /*본문글 줄바꿈 표시*/
+
     </style>
 </head>
 
@@ -32,7 +33,7 @@
 
             <h2>게시판 본문글</h2>
             <div class="row offset-1 col-10 my-3">
-            <table class="table table-striped">
+            <table class="table">
                 <thead><tr><td>
                     <button type="button" class="btn btn-light">
                         이전게시물</button>
@@ -47,9 +48,9 @@
                 <tbody>
                 <tr><th class="vtit" colspan="2" th:text="${bd.title}">제목</th></tr>
 
-                <tr class="vinfo"><td th:text="${bd.userid}">작성자</td>
+                <tr><td th:text="${bd.userid}" class="vinfo">작성자</td>
 
-                    <td class="text-end" th:text="|${bd.regdate}/ ${bd.thumbs}/ ${bd.views}|"> 작성일/추천/조회</td></tr>
+                    <td class="text-end vinfo" th:text="|${bd.regdate}/ ${bd.thumbs}/ ${bd.views}|"> 작성일/추천/조회</td></tr>
 
                 <tr><td class="vcont pre" colspan="2" th:text="${bd.contents}">본문글</td></tr>
                 </tbody>
