--- a/src/main/resources/templates/views/board/list.html
+++ b/src/main/resources/templates/views/board/list.html
@@ -31,7 +31,7 @@
                         </div>
                     </td>
                     <td colspan="3"  class="text-end">
-                        <button type="button" class="btn btn-primary"><i class="fas fa-pen"></i> 글쓰기</button>
+                        <button type="button" class="btn btn-primary" id="newbdbtn"><i class="fas fa-pen"></i> 글쓰기</button>
                     </td>
                 </tr>
                 <tr class="table-light">
@@ -91,6 +91,11 @@
             let findbtn = document.querySelector("#findbtn");
             let findtype =document.querySelector("#findtype");
             let findkey =document.querySelector("#findkey");
+            let newbdbtn = document.querySelector("#newbdbtn");
+
+            newbdbtn.addEventListener('click',(e) => {
+                location.href = `/board/write`;
+            });
 
             findbtn.addEventListener('click',(e) => {
                 if(findkey.value === '') {
