게시판 글쓰기 구현 5 - recaptcha 키 관리

--- a/src/main/resources/templates/views/board/write.html
+++ b/src/main/resources/templates/views/board/write.html
@@ -48,7 +48,7 @@
                 </div>
 
                 <div class="my-2 d-flex justify-content-center">
-                    <div class="g-recaptcha" id="recaptcha" data-sitekey="6Le7xOgqAAAAAOsmtI02LRQTGj1fxWYgSSssxgdg"></div>
+                    <div class="g-recaptcha" id="recaptcha" th:data-sitekey="${sitekey}"></div>
                 </div>
 
                 <div class="my-2 d-flex justify-content-between">
