--- a/src/main/resources/templates/views/board/view.html
+++ b/src/main/resources/templates/views/board/view.html
@@ -24,6 +24,11 @@
 
         .pre{white-space: pre-wrap} /*본문글 줄바꿈 표시*/
 
+        .reply-border { border-top: 2px solid gray;
+            border-bottom:2px solid gray }
+
+        .pushend { float: right }
+
     </style>
 </head>
 
@@ -70,6 +75,20 @@
                 <div class="my-3">
                     <h3><i class="fa fa-commenting"> </i> 나도 한마디</h3>
                 </div>
+
+                <table class="table reply-border">
+                    <tr th:each="rp : ${rps}">
+
+                        <td class="text-left" th:text="${rp.userid}"></td>
+                        <td>
+                            <div class="cmtbg"><span th:text="${rp.regdate}">2025-03-04 23:41:27</span>
+                                <span class="pushend">
+                                        <a href="#" data-ref="117" data-bs-toggle="modal"
+                                           data-bs-target="#cmtModal">[추가]</a> [수정] [삭제]</span></div>
+                            <p class="py-1 pre" th:text="${rp.comments}"></p>
+                        </td>
+                    </tr>
+                </table> <!--댓글/대댓글 목록-->
 
                     <div class="py-3">
                         <form class="card card-body bg-light" method="post"
