--- a/src/main/resources/templates/views/board/write.html
+++ b/src/main/resources/templates/views/board/write.html
@@ -30,7 +30,7 @@
 
                 <div class="form-floating my-2">
                     <input type="text" name="userid" id="userid" class="form-control"
-                       placeholder="아이디" readonly value="abc123">
+                       placeholder="아이디" readonly th:value="${session.loginUser.userid}">
                     <label for="userid" class="form-label">아이디</label>
                 </div>
 
