로그인 여부에 따라 표시되는 객체에 옵셔널 체이닝 설정

--- a/src/main/resources/templates/views/board/list.html
+++ b/src/main/resources/templates/views/board/list.html
@@ -92,7 +92,8 @@
             let findkey =document.querySelector("#findkey");
             let newbdbtn = document.querySelector("#newbdbtn");
 
-            newbdbtn.addEventListener('click',(e) => {
+            // 옵셔널 체이닝
+            newbdbtn?.addEventListener('click',(e) => {
                 location.href = `/board/write`;
             });
 
