--- a/src/main/resources/templates/views/gallery/write.html
+++ b/src/main/resources/templates/views/gallery/write.html
@@ -47,10 +47,11 @@
                     <label for="contents" class="form-label">본문글</label>
                 </div>
 
-                <div class="form-floating my-2">
+                <div class="my-2">
                     <input type="file" name="ginames" id="ginames" class="form-control"
-                           placeholder="이미지첨부" multiple required>
-                    <label for="title" class="form-label">이미지첨부</label>
+                           multiple required>
+                    <!--<label for="title" class="form-label">이미지첨부</label>-->
+                    <input type="hidden" name="simgname" id="simgname">
                 </div>
 
 
@@ -84,9 +85,19 @@
                 clearErrorMessages();  // 에러메세지 초기화
 
                 // 입력 요소 유효성 검사
-                let isValid = validBoard(galleryfrm);
+                let isValid = validGallery(galleryfrm);
 
-                if (isValid) submitBoardfrm(galleryfrm);
+                // 첨부한 이미지들 중에서 첫 번째 이미지 파일의 이름 추출
+                // cowmeat01.jpg => cowmeat01_small.jpg
+                // cowmeat01.blabla.jpg => cowmeat01.blabla_small.jpg
+                const ginames = document.querySelector('#ginames');
+                const simgname = document.querySelector('#simgname');
+                const fname = ginames.files[0].name.split('.');
+                const tfname = `${fname[0]}_small.${fname[1]}`;
+                /*alert(fname + '/' + tfname);*/
+                simgname.value = tfname; // 생성한 썸네일파일명을 hidden 요소에 삽입
+
+                if (isValid) submitGalleryfrm(galleryfrm);
             });
         </script>
 
