갤러리 구현 7 - 갤러리 글쓰기 등록 구현 1 작성한 게시글을  gallerys에 저장하고 생성된 글 번호 추출

--- a/src/main/resources/templates/views/gallery/write.html
+++ b/src/main/resources/templates/views/gallery/write.html
@@ -26,7 +26,8 @@
     <th:block layout:fragment="content">
         <main id="content">
             <h2>이미지 갤러리 글쓰기</h2>
-            <form name="galleryfrm" id="galleryfrm" method="post" novalidate>
+            <form name="galleryfrm" id="galleryfrm" method="post" novalidate
+            enctype="">
 
                 <div class="form-floating my-2">
                     <input type="text" name="userid" id="userid" class="form-control"
