--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
-    <nav role="navigation" class="navbar navbar-light bg-light" th:fragment="nav">
-        <ul class="nav space-between">
-            <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<nav role="navigation" class="navbar navbar-light bg-light" th:fragment="nav">
+    <ul class="nav space-between">
+        <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
 
-            <li class="nav-item" th:if="${session.loginUser == null}">
+        <th:block sec:authorize="isAnonymous()">
+            <li class="nav-item">
                 <a href="/member/join" class="nav-link">회원가입</a></li>
-            <li class="nav-item" th:if="${session.loginUser != null}">
-                <a href="#" class="nav-link">회원가입</a></li>
-
-            <li class="nav-item" th:if="${session.loginUser == null}">
+            <li class="nav-item">
                 <a href="/member/login" class="nav-link">로그인</a></li>
-            <li class="nav-item" th:if="${session.loginUser != null}">
-                <a href="/member/logout" class="nav-link">로그아웃</a></li>
+        </th:block>
 
-            <li class="nav-item"><a href="/board/list" class="nav-link">게시판</a></li>
-            <li class="nav-item"><a href="/gallery/list" class="nav-link">갤러리</a></li>
-            <li class="nav-item"><a href="/member/myinfo" class="nav-link">회원정보</a></li>
-        </ul>
-    </nav>
+        <th:block sec:authorize="isAuthenticated()">
+            <li class="nav-item">
+                <a href="#" class="nav-link">회원가입</a></li>
+            <li class="nav-item">
+                <a href="/member/logout" class="nav-link">로그아웃</a></li>
+        </th:block>
+
+        <li class="nav-item"><a href="/board/list" class="nav-link">게시판</a></li>
+        <li class="nav-item"><a href="/gallery/list" class="nav-link">갤러리</a></li>
+        <li class="nav-item"><a href="/member/myinfo" class="nav-link">회원정보</a></li>
+    </ul>
+</nav>
 </html>
