로그인 후 게시판 리스트에 새글쓰기 버튼, 로그인 후 새글쓰기에 작성자 아이디 표시

--- a/src/main/resources/templates/views/board/write.html
+++ b/src/main/resources/templates/views/board/write.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       layout:decorate="~{layouts/layout}">
 
     <head><!-- layout.html의 head - styles 태그에 자동 삽입 -->
@@ -30,7 +31,7 @@
 
                 <div class="form-floating my-2">
                     <input type="text" name="userid" id="userid" class="form-control"
-                       placeholder="아이디" readonly th:value="${session.loginUser.userid}">
+                       placeholder="아이디" readonly th:value="${#authentication.principal.username}">
                     <label for="userid" class="form-label">아이디</label>
                 </div>
 
