--- a/src/main/resources/templates/views/board/view.html
+++ b/src/main/resources/templates/views/board/view.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/layout}">
 <head>
@@ -46,18 +47,18 @@
                     <button type="button" class="btn btn-light">
                         다음게시물</button></td>
                     <td class="text-end">
-                        <button type="button" class="btn btn-primary" id="newbdbtn" th:if="${session.loginUser ne null}">
+                        <button type="button" class="btn btn-primary" id="newbdbtn" sec:authorize="isAuthenticated()">
                             새글쓰기</button></td>
                 </tr>
                 </thead>
                 <tbody>
-                <tr><th class="vtit" colspan="2" th:text="${bdrps.bd.title}">제목</th></tr>
+<!--                <tr><th class="vtit" colspan="2" th:text="${bdrps.bd.title}">제목</th></tr>-->
 
-                <tr><td th:text="${bdrps.bd.userid}" class="vinfo">작성자</td>
+<!--                <tr><td th:text="${bdrps.bd.userid}" class="vinfo">작성자</td>-->
 
-                    <td class="text-end vinfo" th:text="|${bdrps.bd.regdate}/ ${bdrps.bd.thumbs}/ ${bdrps.bd.views}|"> 작성일/추천/조회</td></tr>
+<!--                    <td class="text-end vinfo" th:text="|${bdrps.bd.regdate}/ ${bdrps.bd.thumbs}/ ${bdrps.bd.views}|"> 작성일/추천/조회</td></tr>-->
 
-                <tr><td class="vcont pre" colspan="2" th:text="${bdrps.bd.contents}">본문글</td></tr>
+<!--                <tr><td class="vcont pre" colspan="2" th:text="${bdrps.bd.contents}">본문글</td></tr>-->
                 </tbody>
                 <tfoot>
                 <tr><td>
@@ -77,37 +78,37 @@
                 </div>
 
                 <table class="table reply-border">
-                    <tr th:each="rp : ${bdrps.rps}">
+<!--                    <tr th:each="rp : ${bdrps.rps}">-->
 
-                        <!--댓글 출력-->
-                        <th:block th:if="${rp.rno eq rp.ref}">
-                        <td class="text-left" th:text="${rp.userid}"></td>
-                        <td>
-                            <div class="cmtbg"><span th:text="${rp.regdate}">2025-03-04 23:41:27</span>
-                                <span class="pushend" th:if="${session.loginUser ne null}">
-                                        <a href="#" th:data-ref="${rp.rno}" data-bs-toggle="modal"
-                                           data-bs-target="#cmtModal">[추가]</a> [수정] [삭제]</span></div>
-                            <p class="py-1 pre" th:text="${rp.comments}"></p>
-                        </td>
-                        </th:block>
+<!--                        &lt;!&ndash;댓글 출력&ndash;&gt;-->
+<!--                        <th:block th:if="${rp.rno eq rp.ref}">-->
+<!--                        <td class="text-left" th:text="${rp.userid}"></td>-->
+<!--                        <td>-->
+<!--                            <div class="cmtbg"><span th:text="${rp.regdate}">2025-03-04 23:41:27</span>-->
+<!--                                <span class="pushend" th:if="${session.loginUser ne null}">-->
+<!--                                        <a href="#" th:data-ref="${rp.rno}" data-bs-toggle="modal"-->
+<!--                                           data-bs-target="#cmtModal">[추가]</a> [수정] [삭제]</span></div>-->
+<!--                            <p class="py-1 pre" th:text="${rp.comments}"></p>-->
+<!--                        </td>-->
+<!--                        </th:block>-->
 
-                        <!-- 대댓글 출력 -->
-                        <th:block th:if="${rp.rno ne rp.ref}">
-                        <td class="text-left"></td>
-                        <td>
-                            <div class="rpybg"><span th:text="${rp.userid}">작성자</span>
-                                <span class="pushend" th:text="${rp.regdate}">작성일</span></div>
-                            <p class="py-1 pre" th:text="${rp.comments}"></p>
-                        </td>
-                        </th:block>
-                    </tr>
+<!--                        &lt;!&ndash; 대댓글 출력 &ndash;&gt;-->
+<!--                        <th:block th:if="${rp.rno ne rp.ref}">-->
+<!--                        <td class="text-left"></td>-->
+<!--                        <td>-->
+<!--                            <div class="rpybg"><span th:text="${rp.userid}">작성자</span>-->
+<!--                                <span class="pushend" th:text="${rp.regdate}">작성일</span></div>-->
+<!--                            <p class="py-1 pre" th:text="${rp.comments}"></p>-->
+<!--                        </td>-->
+<!--                        </th:block>-->
+<!--                    </tr>-->
                 </table> <!--댓글/대댓글 목록-->
 
-                    <div class="py-3" th:if="${session.loginUser ne null}">
+                    <div class="py-3" sec:authorize="isAuthenticated()">
                         <form class="card card-body bg-light" method="post"
                               name="replyfrm" id="replyfrm">
                             <div class="row align-items-center">
-                                <div class="col text-center"><label th:text="${session.loginUser.userid}"></label></div>
+                                <div class="col text-center"><label th:text="${#authentication.principal.username}"></label></div>
 
                                 <div class="col-8"><textarea id="comments" rows="10" name="comments"
                                                              class="form-control col-7"></textarea></div>
